--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Nikon/Nikon-Salon-Photo-2016",
+    "name": "Benoit/Encheres",
     "require": {
         "php": ">=5.6.0",
         "slim/slim": "^3.1",
